refsearch/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      enableServiceLinks: false
      containers:
        - name: backend
          image: ghcr.io/salab/refsearch-backend:master
          ports:
            - containerPort: 3000
              name: http
      imagePullSecrets:
        - name: image-pull-secret
