refsearch/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      enableServiceLinks: false
      containers:
        - name: frontend
          image: ghcr.io/salab/refsearch-frontend:master
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /config
              name: config
      volumes:
        - name: data
          emptyDir: {}
        - name: config
          emptyDir: {}
      imagePullSecrets:
        - name: image-pull-secret
