refsearch/runner-stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: runner

spec:
  serviceName: runner
  podManagementPolicy: Parallel
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: runner
  template:
    metadata:
      labels:
        app: runner
    spec:
      enableServiceLinks: false
      containers:
        - name: runner
          image: ghcr.io/salab/refsearch-runner:master@sha256:36d15b9bc74acd9f95eb05616469cbf25c20633c57d6679ef4dc78b6f93ad0a1
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /data
              name: data

        - name: rminer
          image: ghcr.io/salab/refsearch-rminer:master@sha256:4ce7ea03f5193dbbe481091597064ea731b99d429340a6209f2b0247cb7fea77
          args:
            - serve
            - --port
            - "3001"
          ports:
            - containerPort: 3001
              name: rminer
          volumeMounts:
            - mountPath: /data
              name: data

        - name: refdiff
          image: ghcr.io/salab/refsearch-refdiff:master@sha256:545f3f66f7951519c8c1f2e15d7e6143a87391b2e8a2b741e5c306213ae3e3d9
          args:
            - serve
            - --port
            - "3002"
          ports:
            - containerPort: 3002
              name: refdiff
          volumeMounts:
            - mountPath: /data
              name: data

      volumes:
        - name: data
          emptyDir: {}
      imagePullSecrets:
        - name: image-pull-secret
