refsearch/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend

spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: http
