refsearch/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend

spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
