refsearch/runner-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: runner

spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: runner
