refsearch/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: refsearch

spec:
  entryPoints:
    - websecure
  tls:
    secretName: refsearch-tls
  routes:
    - kind: Rule
      match: Host(`refsearch.toki317.dev`)
      #middlewares:
      #  - name: rewrite
      services:
        - namespace: refsearch
          kind: Service
          name: notice
          port: http
          scheme: http

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rewrite

spec:
  plugin:
    rewrite:
      rewrites:
        - from: refsearch
          to: test
